Move SQLite dependency definitions from `zcash_client_sqlite` to root

--- a/zcash_client_sqlite/Cargo.toml
+++ b/zcash_client_sqlite/Cargo.toml
@@ -63,14 +63,11 @@ incrementalmerkletree.workspace = true
 shardtree = { workspace = true, features = ["legacy-api"] }
 
 # - SQLite databases
-# Warning: One of the downstream consumers requires that SQLite be available through
-# CocoaPods, due to being bound to React Native. We need to ensure that the SQLite
-# version required for `rusqlite` is a version that is available through CocoaPods.
-rusqlite = { version = "0.29.0", features = ["bundled", "time", "array"] }
-schemer = "0.2"
-schemer-rusqlite = "0.2.2"
-time = "0.3.22"
-uuid = "1.1"
+rusqlite = { workspace = true, features = ["time", "array"] }
+schemer.workspace = true
+schemer-rusqlite.workspace = true
+time.workspace = true
+uuid.workspace = true
 
 # Dependencies used internally:
 # (Breaking upgrades to these are usually backwards-compatible, but check MSRVs.)
