--- a/supply-chain/config.toml
+++ b/supply-chain/config.toml
@@ -612,6 +612,14 @@ criteria = "safe-to-deploy"
 version = "0.11.17"
 criteria = "safe-to-run"
 
+[[exemptions.iso_country]]
+version = "0.1.4"
+criteria = "safe-to-deploy"
+
+[[exemptions.iso_currency]]
+version = "0.4.4"
+criteria = "safe-to-deploy"
+
 [[exemptions.itertools]]
 version = "0.10.5"
 criteria = "safe-to-deploy"
@@ -982,6 +990,10 @@ criteria = "safe-to-deploy"
 
 [[exemptions.rusqlite]]
 version = "0.29.0"
+criteria = "safe-to-deploy"
+
+[[exemptions.rust_decimal]]
+version = "1.35.0"
 criteria = "safe-to-deploy"
 
 [[exemptions.rustix]]
