--- a/zcash_client_sqlite/Cargo.toml
+++ b/zcash_client_sqlite/Cargo.toml
@@ -29,7 +29,10 @@ rustdoc-args = ["--cfg", "docsrs"]
 zcash_address.workspace = true
 zcash_client_backend = { workspace = true, features = ["unstable-serialization", "unstable-spanning-tree"] }
 zcash_encoding.workspace = true
-zcash_keys = { workspace = true, features = ["orchard", "sapling"] }
+#zcash_keys = { workspace = true, features = ["orchard", "sapling"] }
+zcash_keys = { workspace = true, features = ["sapling"] }
+# Comment out opposite 'zcash_keys' line, to enable orchard, leaving only -
+# one 'zcash_keys' entry uncommented (i.e. no duplicate line)
 zcash_primitives.workspace = true
 zcash_protocol.workspace = true
 zip32.workspace = true
