Add android-logger dep for logcat in android studio

--- a/zcash_client_backend/Cargo.toml
+++ b/zcash_client_backend/Cargo.toml
@@ -33,6 +33,9 @@ features = [
 ]
 rustdoc-args = ["--cfg", "docsrs"]
 
+[target.'cfg(target_os = "android")'.dependencies]
+android_logger = "0.14.1"
+
 [dependencies]
 zcash_address.workspace = true
 zcash_encoding.workspace = true
