Fix android_logger addition for android targets
- Disable these additions when we are not building for android target

--- a/zcash_client_backend/Cargo.toml
+++ b/zcash_client_backend/Cargo.toml
@@ -35,6 +35,7 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 [target.'cfg(target_os = "android")'.dependencies]
 android_logger = "0.14.1"
+log = "0.4.22"
 
 [dependencies]
 zcash_address.workspace = true
