--- a/zcash_client_sqlite/Cargo.toml
+++ b/zcash_client_sqlite/Cargo.toml
@@ -82,6 +82,7 @@ maybe-rayon.workspace = true
 
 [target.'cfg(target_os = "android")'.dependencies]
 android_logger = "0.14.1"
+log = "0.4.22"
 
 [dev-dependencies]
 assert_matches.workspace = true
